argocd/infra3/monitoring/grafana_ingressroute copy.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`grafana.mushroomkingdom.io`)
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
