argocd/infra3/monitoring/prometheus_ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-server
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`prometheus.mushroomkingdom.io`)
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
